--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Algo Trading: Trade When Your Strategy Has an Edge #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">29 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What Is The Link Between These Countries?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 minutes ago</div>
+                        <div class="date">31 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Chande Momentum Strategy (Rules & Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Kashi's Hidden Secrets | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Your Ability to Love is Unlimited | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Lesser-known Temples of Kashi – Juhi Chawla & Sadhguru | 4K UHD</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -816,7 +816,7 @@
                     <div class="video-info">
                         <h3>Why The Best Trading Strategy Doesn't Exist</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Algo Trading: Trade When Your Strategy Has an Edge #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">29 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Chande Momentum Strategy (Rules & Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5807,7 +5807,7 @@
                         <div class="video-info">
                             <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5895,7 +5895,7 @@
                         <div class="video-info">
                             <h3>Why The Best Trading Strategy Doesn't Exist</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Kashi's Hidden Secrets | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Your Ability to Love is Unlimited | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Lesser-known Temples of Kashi – Juhi Chawla & Sadhguru | 4K UHD</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>What Is The Link Between These Countries?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 minutes ago</div>
+                            <div class="date">31 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10283,7 +10283,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
