--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 12.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 12.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Chande Momentum Strategy (Rules & Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN MAKE THE SOUND: BRAINROT EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2620,7 +2620,7 @@
                     <div class="video-info">
                         <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 13, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 12.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 12.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5796,7 +5796,7 @@
                         <div class="video-info">
                             <h3>Chande Momentum Strategy (Rules & Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10123,7 +10123,7 @@
                         <div class="video-info">
                             <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 13, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN MAKE THE SOUND: BRAINROT EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
