--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Creating an Upward Spiral of Inner Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 12.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Arthur Couldn't Understand Tays😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Algo Trading: Trade When Your Strategy Has an Edge #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>What Is The Link Between These Countries?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy: Proven Range & Momentum Entry #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2268,7 +2268,7 @@
                     <div class="video-info">
                         <h3>A Simple Momentum Trading Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 12.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5785,7 +5785,7 @@
                         <div class="video-info">
                             <h3>Algo Trading: Trade When Your Strategy Has an Edge #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5895,7 +5895,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy: Proven Range & Momentum Entry #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6467,7 +6467,7 @@
                         <div class="video-info">
                             <h3>A Simple Momentum Trading Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Creating an Upward Spiral of Inner Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>Arthur Couldn't Understand Tays😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>What Is The Link Between These Countries?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
